--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-  background-color: rgb(182, 182, 182);
+  background-image: url(https://i.imgur.com/JSha1iu.png);
+  background-size: 1950px 1200px;
+  background-repeat: no-repeat;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,11 +10,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 
 .NavBar {
   display: flex;
@@ -161,4 +163,25 @@ code {
 
 #profile{
   margin: 40px;
+}
+
+.Samonim, .Shin, .kim{
+  border: solid;
+  border-width: 1.5px;
+  background-color: gray;
+  width: 300px;
+  height: 420px;
+  padding: 30px;
+  font-size: 12px;
+}
+
+
+.Home{
+  border: solid;
+  border-color: rgb(167, 167, 167);;
+  border-width: 1px;
+  padding: 200px;
+  margin: 100px;
+  background-color: rgb(167, 167, 167);
+  opacity: 0.78;
 }
