--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   background-image: url(https://i.imgur.com/JSha1iu.png);
   background-size: 1950px 1200px;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
