--- a/src/Style/spotify.css
+++ b/src/Style/spotify.css
@@ -1,6 +1,7 @@
 
 /* CSS */
 .button-68 {
+  margin: 20px;
   appearance: none;
   backface-visibility: hidden;
   background-color: #27ae60;
@@ -65,7 +66,79 @@
   width: 150px;
 }
 
+.card{
+  background-color: grey;
+  border: solid black;
+  width: 1000;
+  height: 800;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 70px;
+}
+.img{
+  border: solid black;
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+}
+
+
+
+
 .form{
   display: flex;
   flex-direction: row;
+}
+
+
+/* CSS */
+.button-24 {
+  margin: 10px;
+  background: #FF4742;
+  border: 1px solid #FF4742;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 14px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+.button-24:hover,
+.button-24:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: #FF4742;
+}
+
+.button-24:active {
+  opacity: .5;
+}
+
+.input{
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid gray;
+  outline: 0;
+  font-size: 1.3rem;
+  color: white;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+  text-align: center;
 }
