more feedback css

--- a/src/index.css
+++ b/src/index.css
@@ -278,3 +278,76 @@ code {
   flex-direction: column;
   margin-bottom: 50px;
 }
+
+.edit-form{
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.edit-mother-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+.edit-input{
+  margin: 10px;
+}
+
+.edit-btn {
+  background-color: #111827;
+  border: 1px solid transparent;
+  border-radius: .75rem;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex: 0 0 auto;
+  font-family: "Inter var",ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+  padding: .75rem 1.2rem;
+  text-align: center;
+  text-decoration: none #6B7280 solid;
+  text-decoration-thickness: auto;
+  transition-duration: .2s;
+  transition-property: background-color,border-color,color,fill,stroke;
+  transition-timing-function: cubic-bezier(.4, 0, 0.2, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+}
+
+.edit-btn:hover {
+  background-color: #374151;
+}
+
+.edit-btn:focus {
+  box-shadow: none;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+#dlt-btn{
+  margin: 10px;
+}
+
+.data-div, .edit-form{
+  width: 1500px;
+  border: solid grey 0.1px;
+  background-color: grey;
+  opacity: 0.8;
+}
+
+.data-mother-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
